# oasis

./: .gitignore  README.md  package-lock.json  package.json  pyproject.toml
backend/: GMAIL_QUICK_SETUP.md  GMAIL_SETUP.md  README.md  package-lock.json  package.json  pnpm-lock.yaml  test-gmail-simple.js  tsconfig.json  vitest.config.ts
backend/integration-tests/: agent-integration.test.js  contacts-integration.test.js  fs-integration.test.js  gmail-integration.test.js  outlook-integration.test.js  slack-integration.test.js  terminal-integration.test.js
backend/scripts/: auth-gmail.js  test-gmail-simple.js  test-gmail.js
backend/src/: http-server.ts  index.ts
backend/src/handlers/: calendar.ts  contacts.ts  do_anything.ts  fs.ts  github.ts  gmail.ts  index.ts  notion.ts  open_app.ts  outlook.ts  slack.ts  status.ts  terminal.ts  ui.ts
backend/src/utils/: ajv.ts  cache.ts  errors.ts  fs-safe.ts  graph-api.ts  ics.ts  jobs.ts  logger.ts
backend/tests/: ics.test.ts  outlook.test.ts
frontend/: README_GMAIL_INTEGRATION.md  ascii_art.txt  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/animations/: page.tsx
frontend/app/os/: page.tsx
frontend/components/: comp-542.tsx  logo.tsx  reveal.tsx
frontend/components/os/: desktop.tsx  dock.tsx  top-bar.tsx  window.tsx
frontend/components/ui/: card.tsx  dialog.tsx  input.tsx  (+1 more)
frontend/hooks/: use-backend.ts
frontend/lib/: computer-use.ts  os-events.ts  prompts.ts  utils.ts
frontend/types/: ai-react.d.ts
scripts/: demo.py  setup.py
(+61 files in other folders)
